--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "encoding": "^0.1.13",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.1"
   },
